outline html test

--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Information</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 50px;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        .info {
+            margin-bottom: 20px;
+        }
+        .info label {
+            font-weight: bold;
+            display: block;
+            margin-bottom: 5px;
+        }
+        .info p {
+            margin: 0;
+            padding: 10px;
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+        <h1>Personal Information</h1>
+
+        <div class="info">
+            <label for="name">name:</label>
+            <p id="name">Desmond Alioshin</p>
+        </div>
+
+        <div class="info">
+            <label for="address">email:</label>
+            <p id="address">dalioshin@gmail.com </p>
+        </div>
+
+        <div class="info">
+            <label for="description">bio:</label>
+            <p id="description">engineer and artist.</p>
+        </div>
+    </div>
+
+</body>
+</html>
