--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Arcade Portfolio - Video</title>
+    <title>Contact</title>
 </head>
 <body>
     <nav class="nav-bar">
@@ -14,13 +14,14 @@
             <a href="portfolio.html">PORTFOLIO</a>
             <a href="contact.html">CONTACT</a>
         </div>
-    </nav>
+    </nav>    
     <main style="margin-top: 100px;">
-        <h1>Latest Work (WIP)</h1>
-        <div class="video-container">
-            <!-- Replace with your video embed code -->
-            <iframe width="100%" height="400" src="https://www.youtube.com/embed/..." frameborder="0"></iframe>
-        </div>
+        <h1>reach out</h1>
+        <form class="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
+            <input class="form-input" type="email" name="email" placeholder="ENTER EMAIL" required>
+            <textarea class="form-input" name="message" placeholder="MESSAGE" rows="5" required></textarea>
+            <button class="form-button" type="submit">SEND</button>
+        </form>
     </main>
 </body>
 </html>
