--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Arcade Portfolio - Video</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <nav class="nav-bar">
@@ -16,10 +16,11 @@
         </div>
     </nav>
     <main style="margin-top: 100px;">
-        <h1>Latest Work (WIP)</h1>
-        <div class="video-container">
-            <!-- Replace with your video embed code -->
-            <iframe width="100%" height="400" src="https://www.youtube.com/embed/..." frameborder="0"></iframe>
+        <h1>photos and renders</h1>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <img src="assets/images/first_render.png" alt="Project 1">
+            </div>
         </div>
     </main>
 </body>
