add email, comment form for now

--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,12 @@
     </nav>    
     <main style="margin-top: 100px;">
         <h1>reach out</h1>
-        <form class="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
+        <p>Find me here: dalioshin@gmail.com</p>
+        <!-- <form class="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
             <input class="form-input" type="email" name="email" placeholder="ENTER EMAIL" required>
             <textarea class="form-input" name="message" placeholder="MESSAGE" rows="5" required></textarea>
             <button class="form-button" type="submit">SEND</button>
-        </form>
+        </form> -->
     </main>
 </body>
 </html>
