Update bio, add new render

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,9 @@
     <main style="margin-top: 100px;">
         <h1>reach out</h1>
         <p>Find me here: dalioshin@gmail.com</p>
+        <p>
+            or here: <a href="https://www.linkedin.com/in/desmond-alioshin/">linkedin</a>
+        </p>
         <!-- <form class="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
             <input class="form-input" type="email" name="email" placeholder="ENTER EMAIL" required>
             <textarea class="form-input" name="message" placeholder="MESSAGE" rows="5" required></textarea>
