--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,10 @@
         <h1>photos and renders</h1>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <img src="assets/images/first_render.png" alt="Project 1">
+                <img src="assets/images/star_system_uniform_color_size.png" alt="Exo Planet Star System Map">
+            </div>
+            <div class="portfolio-item">
+                <img src="assets/images/first_render.png" alt="Test Render">
             </div>
         </div>
     </main>
