--- a/about.html
+++ b/about.html
@@ -18,10 +18,7 @@
     <main style="margin-top: 100px;">
         <h1>Desmond Alioshin</h1>
         <div class="content-box">
-            <p>aka motomanzo</p>
-            <p>Why should creativity be limited to science OR art? I have the same searching
-                brain which applies to both. I am an engineer and an artist and honestly in practice
-                they are one and the same.
+            <p>I seek to not limit my creativity and skills to one domain. I am an observer, learner, and maker.
             </p>
             <p>I have 4 years of experience working as a software and machine learning engineer at Docusign.
                 While there I learned valuable lessons about building scalable and reliable software. Since
@@ -31,10 +28,6 @@
                 Before my industry experience I attended Rensselear Polytechnic Institute and graduated with a BS in Computer and 
                 Systems Engineering. And before my university experience I lived as a child with many great teachers,
                 official and not, who encouraged my creative spirit.
-            </p>
-            <p>
-                If I had to give an overall summary it would be this; I have a neverending curiosity with the world around us,
-                which leads to my need to create new ways to experience it.
             </p>
         </div>
     </main>
