add photo section, remove crt filter

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,8 @@
         </div>
     </nav>
     <main style="margin-top: 100px;">
-        <h1>photos and renders</h1>
+        <h1>Portfolio</h1>
+        <h3>Renders</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <div class="image-container" onclick="openFullscreen('assets/images/star_system_uniform_color_size.png', 'exoplanet star system map')">
@@ -37,6 +38,39 @@
                     <p>Color and shape test render of star system representations.</p>
                 </div>
             </div>
+        </div>
+        <h3>Photos</h3>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <div class="image-container" onclick="openFullscreen('assets/images/13140026.jpg', '')">
+                    <img src="assets/images/13140026.jpg" alt="ice cave">
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="image-container"  onclick="openFullscreen('assets/images/13140014.jpg', '')">
+                    <img src="assets/images/13140014.jpg" alt="ocean view">
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="image-container"  onclick="openFullscreen('assets/images/13140032.jpg', '')">
+                    <img src="assets/images/13140032.jpg" alt="church">
+                </div>
+            </div>
+            <!-- <div class="portfolio-item">
+                <div class="image-container"  onclick="openFullscreen('assets/images/R1-08596-0032.jpg', '')">
+                    <img src="assets/images/R1-08596-0032.jpg" alt="pedals">
+                </div>
+            </div> -->
+            <div class="portfolio-item">
+                <div class="image-container"  onclick="openFullscreen('assets/images/13140032.jpg', '')">
+                    <img src="assets/images/13140015.jpg" alt="lighthouse">
+                </div>
+            </div>
+            <!-- <div class="portfolio-item">
+                <div class="image-container"  onclick="openFullscreen('assets/images/R1-08596-0026.jpg', '')">
+                    <img src="assets/images/R1-08596-0026.jpg" alt="guitar">
+                </div>
+            </div> -->
         </div>
         <div id="fullscreen-viewer" class="fullscreen-viewer">
             <span class="close-btn" onclick="closeFullscreen()">&times;</span>
