filename jpg to JPG

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,33 +42,33 @@
         <h3>Photos</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <div class="image-container" onclick="openFullscreen('assets/images/13140026.jpg', '')">
-                    <img src="assets/images/13140026.jpg" alt="ice cave">
+                <div class="image-container" onclick="openFullscreen('assets/images/13140026.JPG', '')">
+                    <img src="assets/images/13140026.JPG" alt="ice cave">
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="image-container"  onclick="openFullscreen('assets/images/13140014.jpg', '')">
-                    <img src="assets/images/13140014.jpg" alt="ocean view">
+                <div class="image-container"  onclick="openFullscreen('assets/images/13140014.JPG', '')">
+                    <img src="assets/images/13140014.JPG" alt="ocean view">
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="image-container"  onclick="openFullscreen('assets/images/13140032.jpg', '')">
-                    <img src="assets/images/13140032.jpg" alt="church">
+                <div class="image-container"  onclick="openFullscreen('assets/images/13140032.JPG', '')">
+                    <img src="assets/images/13140032.JPG" alt="church">
                 </div>
             </div>
             <!-- <div class="portfolio-item">
-                <div class="image-container"  onclick="openFullscreen('assets/images/R1-08596-0032.jpg', '')">
-                    <img src="assets/images/R1-08596-0032.jpg" alt="pedals">
+                <div class="image-container"  onclick="openFullscreen('assets/images/R1-08596-0032.JPG', '')">
+                    <img src="assets/images/R1-08596-0032.JPG" alt="pedals">
                 </div>
             </div> -->
             <div class="portfolio-item">
-                <div class="image-container"  onclick="openFullscreen('assets/images/13140032.jpg', '')">
-                    <img src="assets/images/13140015.jpg" alt="lighthouse">
+                <div class="image-container"  onclick="openFullscreen('assets/images/13140032.JPG', '')">
+                    <img src="assets/images/13140015.JPG" alt="lighthouse">
                 </div>
             </div>
             <!-- <div class="portfolio-item">
-                <div class="image-container"  onclick="openFullscreen('assets/images/R1-08596-0026.jpg', '')">
-                    <img src="assets/images/R1-08596-0026.jpg" alt="guitar">
+                <div class="image-container"  onclick="openFullscreen('assets/images/R1-08596-0026.JPG', '')">
+                    <img src="assets/images/R1-08596-0026.JPG" alt="guitar">
                 </div>
             </div> -->
         </div>
