update title that appears in link preview

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
-    <title>Arcade Portfolio - Video</title>
+    <title>Desmond Alioshin - Art - Engineer</title>
 </head>
 <body>
     <nav class="nav-bar">
