temp remove video tab, make portfolio landing page

--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
 <body>
     <nav class="nav-bar">
         <div class="nav-links">
-            <a href="index.html">VIDEO</a>
+            <!-- <a href="index.html">VIDEO</a> -->
             <a href="about.html">ABOUT</a>
-            <a href="portfolio.html">PORTFOLIO</a>
+            <a href="index.html">PORTFOLIO</a>
             <a href="contact.html">CONTACT</a>
         </div>
     </nav>    
