--- a/portfolio.html
+++ b/portfolio.html
@@ -10,9 +10,9 @@
 <body>
     <nav class="nav-bar">
         <div class="nav-links">
-            <a href="index.html">VIDEO</a>
+            <!-- <a href="index.html">VIDEO</a> -->
             <a href="about.html">ABOUT</a>
-            <a href="portfolio.html">PORTFOLIO</a>
+            <a href="index.html">PORTFOLIO</a>
             <a href="contact.html">CONTACT</a>
         </div>
     </nav>
@@ -26,7 +26,7 @@
                     <div class="image-label">exoplanet star system map</div>
                 </div>
                 <div class="project-description">
-                    <p>Each sphere represents a star system with an exoplanet. The view is centered on Earth.</p>
+                    <p>Each sphere represents actual coordinates of a star system with an exoplanet. The view is centered on Earth.</p>
                 </div>
             </div>
             <div class="portfolio-item">
