--- a/index.html
+++ b/index.html
@@ -10,17 +10,72 @@
 <body>
     <nav class="nav-bar">
         <div class="nav-links">
-            <a href="index.html">VIDEO</a>
+            <!-- <a href="index.html">VIDEO</a> -->
             <a href="about.html">ABOUT</a>
-            <a href="portfolio.html">PORTFOLIO</a>
+            <a href="index.html">PORTFOLIO</a>
             <a href="contact.html">CONTACT</a>
         </div>
     </nav>
     <main style="margin-top: 100px;">
-        <h1>Latest Work (WIP)</h1>
-        <div class="video-container">
-            <!-- Replace with your video embed code -->
-            <iframe width="100%" height="400" src="https://www.youtube.com/embed/..." frameborder="0"></iframe>
+        <h1>Portfolio</h1>
+        <h3>Renders</h3>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <div class="image-container" onclick="openFullscreen('assets/images/star_system_uniform_color_size.png', 'exoplanet star system map')">
+                    <img src="assets/images/star_system_uniform_color_size.png" alt="Exo Planet Star System Map">
+                    <div class="image-label">exoplanet star system map</div>
+                </div>
+                <div class="project-description">
+                    <p>Each sphere represents actual coordinates of a star system with an exoplanet. The view is centered on Earth.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="image-container"  onclick="openFullscreen('assets/images/first_render.png', 'test render')">
+                    <img src="assets/images/first_render.png" alt="Test Render">
+                    <div class="image-label">test render</div>
+                </div>
+                <div class="project-description">
+                    <p>Example color and shape render of star system representations.</p>
+                </div>
+            </div>
+        </div>
+        <h3>Photos</h3>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <div class="image-container" onclick="openFullscreen('assets/images/13140026.JPG', '')">
+                    <img src="assets/images/13140026.JPG" alt="ice cave">
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="image-container"  onclick="openFullscreen('assets/images/13140014.JPG', '')">
+                    <img src="assets/images/13140014.JPG" alt="ocean view">
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="image-container"  onclick="openFullscreen('assets/images/13140032.JPG', '')">
+                    <img src="assets/images/13140032.JPG" alt="church">
+                </div>
+            </div>
+            <!-- <div class="portfolio-item">
+                <div class="image-container"  onclick="openFullscreen('assets/images/R1-08596-0032.JPG', '')">
+                    <img src="assets/images/R1-08596-0032.JPG" alt="pedals">
+                </div>
+            </div> -->
+            <div class="portfolio-item">
+                <div class="image-container"  onclick="openFullscreen('assets/images/13140015.JPG', '')">
+                    <img src="assets/images/13140015.JPG" alt="lighthouse">
+                </div>
+            </div>
+            <!-- <div class="portfolio-item">
+                <div class="image-container"  onclick="openFullscreen('assets/images/R1-08596-0026.JPG', '')">
+                    <img src="assets/images/R1-08596-0026.JPG" alt="guitar">
+                </div>
+            </div> -->
+        </div>
+        <div id="fullscreen-viewer" class="fullscreen-viewer">
+            <span class="close-btn" onclick="closeFullscreen()">&times;</span>
+            <img id="fullscreen-image" class="fullscreen-image">
+            <div id="fullscreen-caption" class="fullscreen-caption"></div>
         </div>
     </main>
 </body>
