add video embed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,20 @@
     </nav>
     <main style="margin-top: 100px;">
         <h1>Portfolio</h1>
-        <h3>Renders</h3>
+        <h3>Animation</h3>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <iframe class="frame-border" width="560" height="315" src="https://www.youtube.com/embed/ItcmbI0YgeA?si=oDs0qnkdwzIG2pME&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="project-description">
+                    <p>Welcome to a short tour of our universe full of exoplanets. Each wireframe sphere in this animation is located 
+                        at the coordinates of a star system with at least one exoplanet. Earth is locked at the center view of the camera
+                        and while there is no shortage of exoplanets there are none confirmed with the life that our home supports. There is no planet B,
+                        we need to protect and cherish what we have.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <h3>Still Renders</h3>        
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <div class="image-container" onclick="openFullscreen('assets/images/star_system_uniform_color_size.png', 'exoplanet star system map')">
@@ -32,10 +45,10 @@
             <div class="portfolio-item">
                 <div class="image-container"  onclick="openFullscreen('assets/images/first_render.png', 'test render')">
                     <img src="assets/images/first_render.png" alt="Test Render">
-                    <div class="image-label">test render</div>
+                    <div class="image-label">three wireframes</div>
                 </div>
                 <div class="project-description">
-                    <p>Example color and shape render of star system representations.</p>
+                    <p>A close view of star system representations.</p>
                 </div>
             </div>
         </div>
