--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <main style="margin-top: 100px;">
         <h1>Desmond Alioshin</h1>
         <div class="content-box">
-            <p>I seek to not limit my creativity and skills to one domain. I am an observer, learner, and maker.
+            <p>I am an maker, learner, and observer.
             </p>
             <p>I have 4 years of experience working as a software and machine learning engineer at Docusign.
                 While there I learned valuable lessons about building scalable and reliable software. Since
@@ -27,8 +27,8 @@
                 and then trying to squeeze those ideas into different mediums. The goal is to share that wonderful feeling
                 of exploration and discovery with as many people as I can reach.  
                 Before my industry experience I attended Rensselear Polytechnic Institute and graduated with a BS in Computer and 
-                Systems Engineering. And before my university experience I lived as a child with many great teachers,
-                official and not, who encouraged my creative spirit.
+                Systems Engineering. Before my university experience I was lucky to be surrounded by many great teachers,
+                official and not, who encouraged my creative and technical spirit.
             </p>
         </div>
     </main>
