--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,8 @@
     </nav>    
     <main style="margin-top: 100px;">
         <h1>reach out</h1>
-        <p>Find me here: dalioshin@gmail.com</p>
+        <p>If anything on this page is interesting to you, or you are looking for a machine learning engineer to help with your mission let's chat!</p>
+        <p>Please find me here: dalioshin@gmail.com</p>
         <p>
             or here: <a href="https://www.linkedin.com/in/desmond-alioshin/">linkedin</a>
         </p>
