--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
-    <title>Desmond Alioshin - Art - Engineer</title>
+    <title>Desmond Alioshin - Engineer - Artist</title>
 </head>
 <body>
     <nav class="nav-bar">
@@ -23,10 +23,10 @@
             <div class="portfolio-item">
                 <iframe class="frame-border" width="560" height="315" src="https://www.youtube.com/embed/ItcmbI0YgeA?si=oDs0qnkdwzIG2pME&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <div class="project-description">
-                    <p>Welcome to a short tour of our universe full of exoplanets. Each wireframe sphere in this animation is located 
+                    <p>Welcome to a short tour of our local universe! Each wireframe sphere in this animation is located 
                         at the coordinates of a star system with at least one exoplanet. Earth is locked at the center view of the camera
                         and while there is no shortage of exoplanets there are none confirmed with the life that our home supports. There is no planet B,
-                        we need to protect and cherish what we have.
+                        we need to protect and cherish what we have. More animations coming soon.
                     </p>
                 </div>
             </div>
