update assets with new renders

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         <h3>Animation</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <iframe class="frame-border" width="560" height="315" src="https://www.youtube.com/embed/ItcmbI0YgeA?si=oDs0qnkdwzIG2pME&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <div class="project-description">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/NlyqaMEvBfw?si=ZCi92RaKngnP40Sd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                <div class="project-description">
                     <p>Welcome to a short tour of our local universe! Each wireframe sphere in this animation is located 
                         at the coordinates of a star system with at least one exoplanet. Earth is locked at the center view of the camera
                         and while there is no shortage of exoplanets there are none confirmed with the life that our home supports. There is no planet B,
@@ -34,8 +33,8 @@
         <h3>Still Renders</h3>        
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <div class="image-container" onclick="openFullscreen('assets/images/star_system_uniform_color_size.png', 'exoplanet star system map')">
-                    <img src="assets/images/star_system_uniform_color_size.png" alt="Exo Planet Star System Map">
+                <div class="image-container" onclick="openFullscreen('assets/images/screenshot_xview.png', 'exoplanet star system map')">
+                    <img src="assets/images/screenshot_xview.png" alt="Exo Planet Star System Map">
                     <div class="image-label">exoplanet star system map</div>
                 </div>
                 <div class="project-description">
