add link to github

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                         and while there is no shortage of exoplanets there are none confirmed with the life that our home supports. There is no planet B,
                         we need to protect and cherish what we have. More animations coming soon.
                     </p>
+                    <p>
+                        Link to project :
+                        <a href="https://github.com/dalioshin/exo-planet">github.com/dalioshin/exoplanet-visualization</a>
+                    </p>
                 </div>
             </div>
         </div>
